maybe a working copy?

--- a/avalon.ipynb
+++ b/avalon.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
     "    # OK now assign viewing ability to everyone. \n",
     "    \n",
     "    for key, value in players_to_roles.items():\n",
-    "        file = open(key, \"w\") \n",
+    "        file = open(key + \"txt\", \"w\") \n",
     "        file.write(\"Hi \" + key +\", \\n\")\n",
     "        file.write(\"Your role in this game is: \"+ value + '\\n')  \n",
     "        file.write('\\n')  \n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 393,
    "metadata": {
     "scrolled": true
    },
@@ -270,6 +270,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -282,6 +289,13 @@
     "\n",
     "This if you changing your settings temporarily."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
