this should work now

--- a/avalon.ipynb
+++ b/avalon.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,14 @@
     "import av_assign as av\n",
     "import smtplib\n",
     "from email.mime.multipart import MIMEMultipart\n",
-    "from email.mime.text import MIMEText"
+    "from email.mime.text import MIMEText\n",
+    "from getpass import getpass\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +124,7 @@
     "        try:\n",
     "            game_roles.remove(\"Minion of Mordred\")\n",
     "        except ValueError as error:\n",
-    "            print(\"You do not have enough players to add this role\")\n",
+    "            print(\"You do not have enough players to add this role.\")\n",
     "        else:\n",
     "            game_roles.insert(2,\"Morgana\")\n",
     "        \n",
@@ -130,11 +132,11 @@
     "        try:\n",
     "            game_roles.remove(\"Minion of Mordred\")\n",
     "        except ValueError as error:\n",
-    "            print(\"You do not have enough players to add this role\")\n",
+    "            print(\"You do not have enough players to add this role.\")\n",
     "        else:\n",
     "            game_roles.insert(2,\"Oberon\")\n",
     "        if \"Morgana\" in game_roles:\n",
-    "            print('You can either have Morgana or Oberon for this amount of players')\n",
+    "            print('You can either have Morgana or Oberon for this amount of players.')\n",
     "    \n",
     "    \n",
     "    # Let's assign a role to each player randomly \n",
@@ -163,8 +165,8 @@
     "    # OK now assign viewing ability to everyone. \n",
     "    \n",
     "    for key, value in players_to_roles.items():\n",
-    "        file = open(key + \"txt\", \"w\") \n",
-    "        file.write(\"Hi \" + key +\", \\n\")\n",
+    "        file = open(key, \"w\") \n",
+    "        file.write(\"Hi \" + key.capitalize() +\", \\n\")\n",
     "        file.write(\"Your role in this game is: \"+ value + '\\n')  \n",
     "        file.write('\\n')  \n",
     "        file.write(\"The players in this game are:\"  + '\\n')  \n",
@@ -172,13 +174,13 @@
     "             file.write(\"- \" + player  + '\\n')\n",
     "        file.write('\\n')         \n",
     "        if percival == True:\n",
-    "            file.write(\"You are playing with the Percival character\"  + '\\n') \n",
+    "            file.write(\"You are playing with the Percival character.\"  + '\\n') \n",
     "\n",
     "        if morgana == True: \n",
-    "            file.write(\"You are playing with the Morgana character\"  + '\\n')\n",
+    "            file.write(\"You are playing with the Morgana character.\"  + '\\n')\n",
     "      \n",
     "        if oberon == True:\n",
-    "            file.write(\"You are playing with the Oberon character\"  + '\\n') \n",
+    "            file.write(\"You are playing with the Oberon character.\"  + '\\n') \n",
     "        \n",
     "        file.write('\\n')  \n",
     "        if value == \"Morgana\":\n",
@@ -196,7 +198,7 @@
     "            for bad_guy in evil_players_to_evil:\n",
     "                 file.write( \"- \" + bad_guy + '\\n') \n",
     "            if oberon == True:\n",
-    "                file.write(\"Since you are playing with Oberon, there is a third unknown evil player \"  + '\\n')\n",
+    "                file.write(\"Since you are playing with Oberon, there is a third unknown evil player.\"  + '\\n')\n",
     "        \n",
     "        if value == \"Oberon\":\n",
     "            file.write(\"You are evil but you are unable to know who else is evil as the Oberon role.\"  + '\\n')\n",
@@ -208,7 +210,7 @@
     "                morgana_player = get_value(players_to_roles, \"Morgana\")\n",
     "                merlins = [merlin_player, morgana_player]\n",
     "                random.shuffle(merlins)\n",
-    "                file.write(\"Since you are playing with Morgana, one of the following players is Merlin the other is \\n Morgana, a servant of Mordred\" + \"\\n\") \n",
+    "                file.write(\"Since you are playing with Morgana, one of the following players is Merlin the other is \\n Morgana, a servant of Mordred.\" + \"\\n\") \n",
     "                file.write( \"- \" + merlins[0] + '\\n')\n",
     "                file.write( \"- \" + merlins[1] +'\\n')\n",
     "            else:\n",
@@ -216,7 +218,7 @@
     "                        \n",
     "                    \n",
     "        if value == \"Loyal Servant of Arthur\":\n",
-    "            file.write(\"As a Loyal Servant of Arthur, you do not get insight into the other player's roles\"  + '\\n')\n",
+    "            file.write(\"As a Loyal Servant of Arthur, you do not get insight into the other players' roles.\"  + '\\n')\n",
     "                    \n",
     "\n",
     "        #file.write(\"Your text goes here\")  \n",
@@ -234,11 +236,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
     "player_names = [\"Mike\", \"Tiffany\", \"Firas\", \"Tom\", \"Varada\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add your player's emails here in the object `player_emails`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 433,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_emails = [\"Mike@word.com\", \"hayleyfboyce@hotmail.com\", \n",
+    "                 \"Firas@word.com\", \"Tom@word.com\", \"Varada@word.com\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Mike': 'Mike@word.com',\n",
+       " 'Tiffany': 'hayleyfboyce@hotmail.com',\n",
+       " 'Firas': 'Firas@word.com',\n",
+       " 'Tom': 'Tom@word.com',\n",
+       " 'Varada': 'Varada@word.com'}"
+      ]
+     },
+     "execution_count": 434,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "email_dict = dict(zip(player_names, player_emails))\n",
+    "email_dict"
    ]
   },
   {
@@ -252,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 435,
    "metadata": {
     "scrolled": true
    },
@@ -270,13 +314,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,21 +328,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 364,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "list(email_dict.keys())\n",
-    "\n",
-    "sender_email, sender_email_pswd = \"gmail\", \"password\""
+    "This is where you enter your email and password."
    ]
   },
   {
@@ -314,9 +340,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sender_email = \".....@gmail.com\"\n",
+    "sender_email_pswd = getpass(\"What is your gmail email password: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 437,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sending emails to players \n",
     "for player in list(email_dict.keys()): \n",
-    "    filename = player.lower() + \".txt\"\n",
+    "    filename = player.lower()\n",
     "    with open(filename, 'r', encoding='utf-8') as file:\n",
     "        file_content = file.read()\n",
     "    \n",
