fixed doc string

--- a/avalon.ipynb
+++ b/avalon.ipynb
@@ -53,7 +53,8 @@
     "\n",
     "def assigning_roles(player_names, percival=False, morgana=False, oberon=False):\n",
     "    \n",
-    "    \"\"\"Gets and prints the spreadsheet's header columns\n",
+    "    \"\"\"\n",
+    "    Creates files with each players role designation and the information they are privy to know\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
